2008-11-13  Richard Frith-Macdonald <rfm@gnu.org>

	* Documentation/README.MingW: Change instructions to use libffi

2008-11-06  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* GNUstep.csh.in: Fix incorrect case pattern which causes
	initialization of DYLD_LIBRARY_PATH on Darwin and NEXTSTEP systems
	to be skipped.

2008-10-27  Nicola Pero  <nicola.pero@meta-innovation.com>

	* configure.ac: Disable precompiled headers on gcc 4.1 since
	there is no reliable ways to determine if they work or not.
	* configure: Regenerated.

2008-10-27  Nicola Pero  <nicola.pero@meta-innovation.com>

	* configure.ac: Added special case when checking for thread
	support on Apple OS X - it should now detect that Apple OS X
	supports threads but needs no threading library specified.  This
	implicitly fixes the following check for native ObjC exceptions.
	* configure: Regenerated.
	* config_thread.m: Rewritten Apple runtime case to use pthread
	directly.

2008-10-21  Nicola Pero  <nicola.pero@meta-innovation.com>

	* Documentation/releasenotes.texi: Updated for latest changes.
	* RELEASENOTES: Regenerated.

2008-10-21  Nicola Pero  <nicola.pero@meta-innovation.com>

	Implemented suggestion from David Chisnall <theraven@sucs.org> of
	using --no-print-directory for recursive make.
	* common.make (GNUSTEP_MAKE_NO_PRINT_DIRECTORY_FLAG): New variable.
	Set it to --no-print-directory unless messages=yes.
	* Master/aggregate.make: Use it when doing recursive invocations
	that change directory.
	* Master/rules.make: Same change.
	
2008-10-21  Nicola Pero  <nicola.pero@meta-innovation.com>

	Fixed problem reported by Funda Wang <fundawang@gmail.com>.
	* GNUstep.sh.in: When adding paths to PATH, CLASSPATH,
	GUILE_LOAD_PATH and INFOPATH, check that each path is not already
	there before adding it.  Previously we were checking, but checking
	the whole string of paths as a single unit; the new code works
	much better when some of the paths, but not all of them, are